--- a/.github/workflows/collect-data.yml
+++ b/.github/workflows/collect-data.yml
@@ -2,9 +2,8 @@ name: iRail Data Collection
 
 on:
   schedule:
-    # Run every 5 minutes
     - cron: "*/5 * * * *"
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch:
 
 jobs:
   collect-data:
@@ -21,8 +20,17 @@ jobs:
           cache: "pip"
 
       - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Debug - Check if secrets exist
         run: |
-          pip install psycopg2-binary requests
+          echo "DB_HOST length: ${#DB_HOST}"
+          echo "DB_PORT: $DB_PORT"
+          echo "DB_NAME: $DB_NAME"
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
 
       - name: Run data collection
         env:
@@ -32,6 +40,3 @@ jobs:
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: python scripts/github_collector.py
-
-      - name: Log collection stats
-        run: echo "✅ Data collection completed at $(date)"
