--- a/.github/workflows/collect-data.yml
+++ b/.github/workflows/collect-data.yml
@@ -16,21 +16,30 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
           cache: "pip"
 
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Debug - Check if secrets exist
+      - name: Verify secrets are set
         run: |
+          if [ -z "$DB_HOST" ]; then echo "❌ DB_HOST is empty!"; exit 1; fi
+          if [ -z "$DB_PORT" ]; then echo "❌ DB_PORT is empty!"; exit 1; fi
+          if [ -z "$DB_NAME" ]; then echo "❌ DB_NAME is empty!"; exit 1; fi
+          if [ -z "$DB_USER" ]; then echo "❌ DB_USER is empty!"; exit 1; fi
+          if [ -z "$DB_PASSWORD" ]; then echo "❌ DB_PASSWORD is empty!"; exit 1; fi
+          echo "✅ All secrets are set"
           echo "DB_HOST length: ${#DB_HOST}"
           echo "DB_PORT: $DB_PORT"
           echo "DB_NAME: $DB_NAME"
+          echo "DB_USER: $DB_USER"
         env:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
           DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
       - name: Run data collection
         env:
